mock, mock, who's there?

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     {% block head %}
         <meta charset="UTF-8">
-        <title>{% block %}But Why{% endblock title %}</title>
+        <title>{% block title %}But Why{% endblock title %}</title>
         {% block style %}
             <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='water.css') }}" />
         {% endblock style %}
